fixed image stretching

--- a/public/Styles/Styles.css
+++ b/public/Styles/Styles.css
@@ -248,3 +248,7 @@ body{
 video{
     outline:none;
 }
+.lazy{
+    object-fit: cover;
+    
+}
